--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
 }
 
 dependencies {
+    compile 'com.google.code.gson:gson:2.8.0'
     implementation 'com.android.support:design:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
